# audio-transcription

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.txt  README.md  docker-compose.yaml  main.py  pyproject.toml  service.py
templates/: upload.html
